syntax = "proto3";

option csharp_namespace = "Jankilla.Core.Proto";

service ProjectService {
    rpc GetProject (ProjectRequest) returns (ProjectResponse);
}

message ProjectRequest {
    string message = 1;
}

message GUID {
    string value = 1;
}

message TagResponse {
    GUID id = 1;
    string name = 2;
    string category = 3;
    string type = 4;
    oneof value {
        sfixed32 int_value = 5;
        float float_value = 6;
        bool bool_value = 7;
        string string_value = 8;
        fixed32 uint_value = 9;
        int32 short_value = 10;
        uint32 ushort_value = 11;
    }
}

message BlockResponse {
    GUID id = 1;
    repeated TagResponse tags = 2;
}

message DeviceResponse {
    GUID id = 1;
    repeated BlockResponse blocks = 2;
}

message DriverResponse {
    GUID id = 1;
    repeated DeviceResponse devices = 2;
}

message ProjectResponse {
    GUID id = 1;
    repeated DriverResponse drivers = 2;
}
